[gd_scene load_steps=2 format=3 uid="uid://buvp5o0xs3lnt"]

[ext_resource type="Script" uid="uid://bkxbsxwjd8a2p" path="res://addons/dewlap_tools/plugins/richtextlabel_editor/bbcode_editor_panel.gd" id="1_k8h7d"]

[node name="BBCodeEditorPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8h7d")

[node name="Toolbar" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Row1" type="HBoxContainer" parent="Toolbar"]
layout_mode = 2

[node name="FontLabel" type="Label" parent="Toolbar/Row1"]
layout_mode = 2
text = "Font:"

[node name="FontDropdown" type="OptionButton" parent="Toolbar/Row1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 17
popup/item_0/text = "(Default)"
popup/item_0/id = 0
popup/item_1/text = "Kenney Blocks"
popup/item_1/id = 1
popup/item_2/text = "Kenney High"
popup/item_2/id = 2
popup/item_3/text = "Kenney High Square"
popup/item_3/id = 3
popup/item_4/text = "Kenney Mini"
popup/item_4/id = 4
popup/item_5/text = "Kenney Mini Square"
popup/item_5/id = 5
popup/item_6/text = "Kenney Mini Square Mono"
popup/item_6/id = 6
popup/item_7/text = "Kenney Pixel"
popup/item_7/id = 7
popup/item_8/text = "Kenney Pixel Square"
popup/item_8/id = 8
popup/item_9/text = "Party_Pack_Normal"
popup/item_9/id = 9
popup/item_10/text = "PixelifySans-VariableFont_wght"
popup/item_10/id = 10
popup/item_11/text = "PressStart2P-Regular"
popup/item_11/id = 11
popup/item_12/text = "Simple_Script"
popup/item_12/id = 12
popup/item_13/text = "m3x6"
popup/item_13/id = 13
popup/item_14/text = "m5x7"
popup/item_14/id = 14
popup/item_15/text = "m6x11"
popup/item_15/id = 15
popup/item_16/text = "m6x11plus"
popup/item_16/id = 16

[node name="SizeLabel" type="Label" parent="Toolbar/Row1"]
layout_mode = 2
text = "Size:"

[node name="FontSizeSpinner" type="SpinBox" parent="Toolbar/Row1"]
unique_name_in_owner = true
layout_mode = 2
min_value = 8.0
max_value = 64.0
value = 16.0

[node name="ApplyToNodeCheckbox" type="CheckBox" parent="Toolbar/Row1"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply to Node"

[node name="Row2" type="HBoxContainer" parent="Toolbar"]
layout_mode = 2

[node name="ScaleLabel" type="Label" parent="Toolbar/Row2"]
layout_mode = 2
text = "Scale:"

[node name="Scale1xButton" type="Button" parent="Toolbar/Row2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "1x"

[node name="Scale2xButton" type="Button" parent="Toolbar/Row2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "2x"

[node name="Scale3xButton" type="Button" parent="Toolbar/Row2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "3x"

[node name="Scale4xButton" type="Button" parent="Toolbar/Row2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "4x"

[node name="HSeparator" type="HSeparator" parent="Toolbar"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="EditorContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EditorLabel" type="Label" parent="HSplitContainer/EditorContainer"]
layout_mode = 2
text = "BBCode Editor:"

[node name="TextEdit" type="TextEdit" parent="HSplitContainer/EditorContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter BBCode here..."
wrap_mode = 1
scroll_smooth = true
minimap_draw = true

[node name="PreviewContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviewLabel" type="Label" parent="HSplitContainer/PreviewContainer"]
layout_mode = 2
text = "Live Preview:"

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer/PreviewContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/PreviewContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PreviewContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/PreviewContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/PreviewContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewTextureRect" type="TextureRect" parent="HSplitContainer/PreviewContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 360)
layout_mode = 2
texture_filter = 1
expand_mode = 1
stretch_mode = 5

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/PreviewContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(480, 360)
render_target_update_mode = 4

[node name="PreviewLabel" type="RichTextLabel" parent="HSplitContainer/PreviewContainer/PanelContainer/MarginContainer/VBoxContainer/SubViewport"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
fit_content = true
